--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+</head>
 
-  </body>
+<body>
+  <header class="main-header">
+    <img src="#" width="1" height="1" alt="Логотип интернет-магазина Device">
+    <!--форма
+    Поиск по сайту
+    -->
+    <ul class="user-navigation">
+      <li>Войти</li>
+      <li>Сравнить</li>
+      <li>Корзина</li>
+    </ul>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li>Каталог товаров</li>
+        <li>Доставка</li>
+        <li>Гарантия</li>
+        <li>Контакты</li>
+      </ul>
+    </nav>
+  </header>
+
+
+</body>
+
 </html>
