Добавляет футер, вносит изменения

--- a/index.html
+++ b/index.html
@@ -8,26 +8,48 @@
 
 <body>
   <header class="main-header">
-    <img src="#" width="1" height="1" alt="Логотип интернет-магазина Device">
+    <span class="logo">Device</span>
     <!--форма
     Поиск по сайту
     -->
     <ul class="user-navigation">
-      <li>Войти</li>
-      <li>Сравнить</li>
-      <li>Корзина</li>
+      <li><a href="#">Войти</a></li>
+      <li><a href="#">Сравнить</a></li>
+      <li><a href="#">Корзина</a></li>
     </ul>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li>Каталог товаров</li>
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Контакты</li>
+        <li><a href="#">Каталог товаров</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
   </header>
 
+    <footer class="main-footer">
+        <span class="logo-footer">Device</span>
+        <ul class="user-navigation-footer">
+            <li><a href="#">Войти</a></li>
+            <li><a href="#">Сравнить</a></li>
+            <li><a href="#">Корзина</a></li>
+        </ul>
+        <span class="contacts">г. Москва, ул. Строителей, 15</span>
+        <ul class="site-navigation-footer">
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+        <span class="contacts">Тел.: +7(495)495-95-95</span>
+        <ul class="footer-sm">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Twitter</a></li>
+        </ul>
 
+
+
+    </footer>
 </body>
 
 </html>
