--- a/index.html
+++ b/index.html
@@ -26,6 +26,65 @@
       </ul>
     </nav>
   </header>
+<!-- Слайдеры. Три штуки по очереди. -->
+<main class="container">
+    <div class="slider1">
+        <img src="#" alt="selfie">
+        <span class="number">01</span>
+        <p>Делай селфи, как Бен Стиллер!</p>
+        <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+
+        <!--форма? Подробнее-->
+    <table>
+        <tr>
+            <th>8,5 м</th>
+            <th>5 кг</th>
+            <th>Карбон</th>
+        </tr>
+        <tr>
+            <td>Длина палки</td>
+            <td>Вес палки</td>
+            <td>Материал</td>
+        </tr>
+    </table>
+    </div>
+    <div class="slider2">
+        <img src="#" alt="selfie">
+        <span class="number">02</span>
+        <p>Худеем правильно!</p>
+        <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+
+        <!--форма? Подробнее-->
+        <table>
+            <tr>
+                <th>48 часов</th>
+            </tr>
+            <tr>
+                <td>Без подзарядки</td>
+            </tr>
+        </table>
+
+    </div>
+    <div class="slider3">
+        <img src="#" alt="selfie">
+        <span class="number">03</span>
+        <p>Порхает как бабочка, жалит как пчела!</p>
+        <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+
+        <!--форма? Подробнее-->
+        <table>
+            <tr>
+                <th>800 м</th>
+                <th>50 м</th>
+            </tr>
+            <tr>
+                <td>Дальность полета</td>
+                <td>Радиус поражения</td>
+            </tr>
+        </table>
+
+    </div>
+</main>
 
     <footer class="main-footer">
         <span class="logo-footer">Device</span>
