Заканчивает разметку главной

--- a/index.html
+++ b/index.html
@@ -82,8 +82,83 @@
                 <td>Радиус поражения</td>
             </tr>
         </table>
-
     </div>
+
+    <div class="popular">
+        <table class="popular-table">
+            <tr>
+                <td><img src="#" alt="Виртуальная реальность"></td>
+                <td><img src="#" alt="Моноподы для селфи"></td>
+                <td><img src="#" alt="Экшн-камеры"></td>
+                <td><img src="#" alt="Фитнес-браслеты"></td>
+                <td><img src="#" alt="Умные часы"></td>
+                <td><img src="#" alt="Квадрокоптеры"></td>
+            </tr>
+            <tr>
+                <th>Виртуальная реальность</th>
+                <th>Моноподы для селфи</th>
+                <th>Экшн-камеры</th>
+                <th>Фитнес-браслеты</th>
+                <th>Умные часы</th>
+                <th>Квадрокоптеры</th>
+            </tr>
+        </table>
+    </div>
+
+    <div class="services">
+        <ul>
+            <li>Доставка</li>
+            <li>Гарантия</li>
+            <li>Кредит</li>
+        </ul>
+
+        <div class="services-delivery">
+            <b>Доставка</b>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая на ваш этаж.</p>
+            <img src="#" alt="Доставка">
+        </div>
+
+        <div class="services-warranty">
+            <b>Гарантия</b>
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+            <img src="#" alt="Гарантия">
+        </div>
+
+        <div class="services-credit">
+            <b>Кредит</b>
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+            <img src="#" alt="Кредит">
+        </div>
+    </div>
+
+    <div class="logotypes">
+        <ul>
+            <li><img src="#" alt="logo1"></li>
+            <li><img src="#" alt="logo2"></li>
+            <li><img src="#" alt="logo3"></li>
+            <li><img src="#" alt="logo4"></li>
+        </ul>
+    </div>
+
+    <div class="info">
+        <b>О нас</b>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставит ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+        <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+            <span>Подробнее о нас</span>
+        </ul>
+    </div>
+
+    <div class="contacts">
+        <b>Контакты</b>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <img src="#" alt="Карта">
+        <span>Напишите нам</span>
+    </div>
+
 </main>
 
     <footer class="main-footer">
@@ -93,22 +168,50 @@
             <li><a href="#">Сравнить</a></li>
             <li><a href="#">Корзина</a></li>
         </ul>
-        <span class="contacts">г. Москва, ул. Строителей, 15</span>
+        <span class="contacts-footer">г. Москва, ул. Строителей, 15</span>
         <ul class="site-navigation-footer">
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Гарантия</a></li>
             <li><a href="#">Контакты</a></li>
         </ul>
-        <span class="contacts">Тел.: +7(495)495-95-95</span>
+        <span class="contacts-footer">Тел.: +7(495)495-95-95</span>
         <ul class="footer-sm">
             <li><a href="#">Facebook</a></li>
             <li><a href="#">Instagram</a></li>
             <li><a href="#">Twitter</a></li>
         </ul>
 
-
-
     </footer>
+
+    <div class="write-us">
+        <b>Ваше имя:</b>
+        <!-- Форма -->
+        <b>Ваш e-mail:</b>
+        <!-- Форма -->
+        <b>Текст письма:</b>
+        <!-- Форма -->
+        <span>Отправить</span>
+
+        <!--Каталог товаров попап -->
+        <div class="catalog-menu">
+            <table>
+                <tr>
+                    <td>Виртуальная реальность</td>
+                    <td>Фитнес-браслеты</td>
+                    <td>Квадрокоптеры</td>
+                </tr>
+                <tr>
+                    <td>Моноподы для селфи</td>
+                    <td>Умные часы</td>
+                </tr>
+                <tr>
+                    <td>Экшн-камеры</td>
+                </tr>
+            </table>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
