Дабавляет ссылку в каждом элементе сортировки, делает лого ссылкой

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
 <body>
   <header class="main-header">
-    <span class="logo">Device</span>
+    <a href="#" class="logo">Device</a> 
     <!--форма
       Поиск по сайту
       -->
@@ -42,9 +42,10 @@
       <div class="sort">
           <span>Сортировка:</span>
           <ul>
-              <li>По цене</li>
-              <li>По типу</li>
-              <li>По популярности</li>
+              <!--Добавлено: ссылка в каждом элементе -->
+              <li><a href="#">По цене</a></li>
+              <li><a href="#">По типу</a> /li>
+              <li><a href="#">По популярности</a></li>
           </ul>
       </div>
 
