Делает лого-футер ссылкой

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
 <body>
   <header class="main-header">
-    <a href="#" class="logo">Device</a> 
+    <a href="#" class="logo">Device</a>
     <!--форма
       Поиск по сайту
       -->
@@ -107,7 +107,7 @@
   </main>
 
   <footer class="main-footer">
-      <span class="logo-footer">Device</span>
+      <a href="#" class="logo-footer">Device</a>
       <ul class="user-navigation-footer">
           <li><a href="#">Валентин Петухов</a></li>
           <li><a href="#">Выйти</a></li>
