Делает лого и лого-футер ссылкой и логотипы ссылкой

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <header class="main-header">
-    <span class="logo">Device</span>
+    <a href="#" class="logo">Device</a>
     <!--форма
     Поиск по сайту
     -->
@@ -133,10 +133,10 @@
 
     <div class="logotypes">
         <ul>
-            <li><img src="#" alt="logo1"></li>
-            <li><img src="#" alt="logo2"></li>
-            <li><img src="#" alt="logo3"></li>
-            <li><img src="#" alt="logo4"></li>
+            <li><a href="#"><img src="#" alt="logo1"></a></li>
+            <li><a href="#"><img src="#" alt="logo2"></a></li>
+            <li><a href="#"><img src="#" alt="logo3"></a></li>
+            <li><a href="#"><img src="#" alt="logo4"></a></li>
         </ul>
     </div>
 
@@ -162,7 +162,7 @@
 </main>
 
     <footer class="main-footer">
-        <span class="logo-footer">Device</span>
+        <a href="#" class="logo-footer">Device</a>
         <ul class="user-navigation-footer">
             <li><a href="#">Войти</a></li>
             <li><a href="#">Сравнить</a></li>
