--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
-            <span>Подробнее о нас</span>
+            <a href="#" class="more">Подробнее о нас</a>
         </ul>
     </div>
 
@@ -156,7 +156,7 @@
         <b>Контакты</b>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <img src="#" alt="Карта">
-        <span>Напишите нам</span>
+        <a href="#" class="write-us-anchor">Напишите нам</a>
     </div>
 
 </main>
