Добавляет контент картинки, переносит каталог-меню в хедер

--- a/index.html
+++ b/index.html
@@ -25,11 +25,29 @@
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
+    <!--Каталог товаров попап -->
+    <div class="catalog-menu">
+        <table>
+            <tr>
+                <td>Виртуальная реальность</td>
+                <td>Фитнес-браслеты</td>
+                <td>Квадрокоптеры</td>
+            </tr>
+            <tr>
+                <td>Моноподы для селфи</td>
+                <td>Умные часы</td>
+            </tr>
+            <tr>
+                <td>Экшн-камеры</td>
+            </tr>
+        </table>
+
+    </div>
   </header>
 <!-- Слайдеры. Три штуки по очереди. -->
 <main class="container">
     <div class="slider1">
-        <img src="#" alt="selfie">
+        <img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
         <span class="number">01</span>
         <p>Делай селфи, как Бен Стиллер!</p>
         <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -49,7 +67,7 @@
     </table>
     </div>
     <div class="slider2">
-        <img src="#" alt="selfie">
+        <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
         <span class="number">02</span>
         <p>Худеем правильно!</p>
         <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -66,7 +84,7 @@
 
     </div>
     <div class="slider3">
-        <img src="#" alt="selfie">
+        <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
         <span class="number">03</span>
         <p>Порхает как бабочка, жалит как пчела!</p>
         <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -133,10 +151,10 @@
 
     <div class="logotypes">
         <ul>
-            <li><a href="#"><img src="#" alt="logo1"></a></li>
-            <li><a href="#"><img src="#" alt="logo2"></a></li>
-            <li><a href="#"><img src="#" alt="logo3"></a></li>
-            <li><a href="#"><img src="#" alt="logo4"></a></li>
+            <li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="logo1"></a></li>
+            <li><a href="#"><img src="img/logo-2.png" width="260" height="100" alt="logo2"></a></li>
+            <li><a href="#"><img src="img/logo-3.png" width="260" height="100" alt="logo3"></a></li>
+            <li><a href="#"><img src="img/logo-4.png" width="260" height="100" alt="logo4"></a></li>
         </ul>
     </div>
 
@@ -155,7 +173,7 @@
     <div class="contacts">
         <b>Контакты</b>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <img src="#" alt="Карта">
+        <img src="img/map.jpg" width="560" height="222" alt="Карта">
         <a href="#" class="write-us-anchor">Напишите нам</a>
     </div>
 
@@ -192,24 +210,7 @@
         <!-- Форма -->
         <span>Отправить</span>
 
-        <!--Каталог товаров попап -->
-        <div class="catalog-menu">
-            <table>
-                <tr>
-                    <td>Виртуальная реальность</td>
-                    <td>Фитнес-браслеты</td>
-                    <td>Квадрокоптеры</td>
-                </tr>
-                <tr>
-                    <td>Моноподы для селфи</td>
-                    <td>Умные часы</td>
-                </tr>
-                <tr>
-                    <td>Экшн-камеры</td>
-                </tr>
-            </table>
 
-        </div>
 
     </div>
 </body>
