Добавляет контент картинки в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
           <ul>
               <!--Добавлено: ссылка в каждом элементе -->
               <li><a href="#">По цене</a></li>
-              <li><a href="#">По типу</a> /li>
+              <li><a href="#">По типу</a></li>
               <li><a href="#">По популярности</a></li>
           </ul>
       </div>
@@ -101,16 +101,16 @@
         <div class="items">
             <table>
                 <tr>
-                    <td><img src="#" alt="Любительская селфи-палка"></td>
-                    <td><img src="#" alt="Профессиональная селфи-палка"></td>
+                    <td><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></td>
+                    <td><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></td>
                 </tr>
                 <tr>
                     <th>Любительская селфи-палка<span>500 руб.</span></th>
                     <th>Профессиональная селфи-палка<span>1500 руб.</span></th>
                 </tr>
                 <tr>
-                    <td><img src="#" alt="Непотопляемая селфи-палка"></td>
-                    <td><img src="#" alt="Селфи-палка «Следуй на мной»"></td>
+                    <td><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></td>
+                    <td><img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»"></td>
                 </tr>
                 <tr>
                     <th>Непотопляемая селфи-палка<span>2500 руб.</span></th>
