--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
 <body>
   <header class="main-header">
-    <a href="#" class="logo">Device</a>
+    <a href="index.html" target="_blank" class="logo">Device</a>
     <!--форма
       Поиск по сайту
       -->
@@ -123,7 +123,7 @@
   </main>
 
   <footer class="main-footer">
-      <a href="#" class="logo-footer">Device</a>
+      <a href="index.html" target="_blank" class="logo-footer">Device</a>
       <ul class="user-navigation-footer">
           <li><a href="#">Валентин Петухов</a></li>
           <li><a href="#">Выйти</a></li>
