--- a/catalog.html
+++ b/catalog.html
@@ -98,27 +98,24 @@
           <span>Вперед</span>
       </div>
 
-        <div class="items">
-            <table>
-                <tr>
-                    <td><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></td>
-                    <td><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></td>
-                </tr>
-                <tr>
-                    <th>Любительская селфи-палка<span>500 руб.</span></th>
-                    <th>Профессиональная селфи-палка<span>1500 руб.</span></th>
-                </tr>
-                <tr>
-                    <td><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></td>
-                    <td><img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»"></td>
-                </tr>
-                <tr>
-                    <th>Непотопляемая селфи-палка<span>2500 руб.</span></th>
-                    <th>Селфи-палка «Следуй на мной»<span>4900 руб.</span></th>
-                </tr>
-            </table>
-
-        </div>
+        <section class="items">
+            <article class="items-item">
+                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                <p>Любительская селфи-палка<span>500 руб.</span></p>
+            </article>
+            <article class="items-item">
+                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+                <p>Профессиональная селфи-палка<span>1500 руб.</span></p>
+            </article>
+            <article class="items-item">
+                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                <p>Непотопляемая селфи-палка<span>2500 руб.</span></p>
+            </article>
+            <article class="items-item">
+                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»">
+                <p>Селфи-палка «Следуй на мной»<span>4900 руб.</span></p>
+            </article>
+        </section>
 
   </main>
 
