Добавляет список каталог-меню вместо таблицы

--- a/catalog.html
+++ b/catalog.html
@@ -27,20 +27,14 @@
       </ul>
     </nav>
     <div class="catalog-menu">
-        <table>
-            <tr>
-                <td>Виртуальная реальность</td>
-                <td>Фитнес-браслеты</td>
-                <td>Квадрокоптеры</td>
-            </tr>
-            <tr>
-                <td>Моноподы для селфи</td>
-                <td>Умные часы</td>
-            </tr>
-            <tr>
-                <td>Экшн-камеры</td>
-            </tr>
-        </table>
+        <ul>
+            <li>Виртуальная реальность</li>
+            <li>Фитнес-браслеты</li>
+            <li>Квадрокоптеры</li>
+            <li>Моноподы для селфи</li>
+            <li>Умные часы</li>
+            <li>Экшн-камеры</li>
+        </ul>
     </div>
   </header>
 
