Добавляет списки вместо таблицы

--- a/index.html
+++ b/index.html
@@ -103,24 +103,22 @@
     </div>
 
     <div class="popular">
-        <table class="popular-table">
-            <tr>
-                <td><img src="#" alt="Виртуальная реальность"></td>
-                <td><img src="#" alt="Моноподы для селфи"></td>
-                <td><img src="#" alt="Экшн-камеры"></td>
-                <td><img src="#" alt="Фитнес-браслеты"></td>
-                <td><img src="#" alt="Умные часы"></td>
-                <td><img src="#" alt="Квадрокоптеры"></td>
-            </tr>
-            <tr>
-                <th>Виртуальная реальность</th>
-                <th>Моноподы для селфи</th>
-                <th>Экшн-камеры</th>
-                <th>Фитнес-браслеты</th>
-                <th>Умные часы</th>
-                <th>Квадрокоптеры</th>
-            </tr>
-        </table>
+        <ul class="popular-items">
+            <li><a href="#"><img src="#" alt="Виртуальная реальность"></a></li>
+            <li><a href="#"><img src="#" alt="Моноподы для селфи"></a></li>
+            <li><a href="#"><img src="#" alt="Экшн-камеры"></a></li>
+            <li><a href="#"><img src="#" alt="Фитнес-браслеты"></a></li>
+            <li><a href="#"><img src="#" alt="Умные часы"></a></li>
+            <li><a href="#"><img src="#" alt="Квадрокоптеры"></a></li>
+        </ul>
+        <ul class="popular-names">
+            <li>Виртуальная реальность</li>
+            <li>Моноподы для селфи</li>
+            <li>Экшн-камеры</li>
+            <li>Фитнес-браслеты</li>
+            <li>Умные часы</li>
+            <li>Квадрокоптеры</li>
+        </ul>
     </div>
 
     <div class="services">
