Добавляет саб-меню

--- a/catalog.html
+++ b/catalog.html
@@ -20,22 +20,23 @@
     </ul>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="#">Каталог товаров</a></li>
+          <li>
+              <a href="#">Каталог товаров</a>
+              <!--Каталог товаров попап -->
+              <ul class="catalog-sub-menu">
+                  <li><a href="#">Виртуальная реальность</a></li>
+                  <li><a href="#">Фитнес-браслеты</a> </li>
+                  <li><a href="#">Квадрокоптеры</a></li>
+                  <li><a href="#">Моноподы для селфи</a></li>
+                  <li><a href="#">Умные часы</a></li>
+                  <li><a href="#">Экшн-камеры</a></li>
+              </ul>
+          </li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарантия</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
-    <div class="catalog-menu">
-        <ul>
-            <li>Виртуальная реальность</li>
-            <li>Фитнес-браслеты</li>
-            <li>Квадрокоптеры</li>
-            <li>Моноподы для селфи</li>
-            <li>Умные часы</li>
-            <li>Экшн-камеры</li>
-        </ul>
-    </div>
   </header>
 
   <main class="container">
