--- a/index.html
+++ b/index.html
@@ -19,30 +19,24 @@
     </ul>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="#">Каталог товаров</a></li>
+        <li>
+            <a href="#">Каталог товаров</a>
+            <!--Каталог товаров попап -->
+            <ul class="catalog-sub-menu">
+                <li><a href="#">Виртуальная реальность</a></li>
+                <li><a href="#">Фитнес-браслеты</a> </li>
+                <li><a href="#">Квадрокоптеры</a></li>
+                <li><a href="#">Моноподы для селфи</a></li>
+                <li><a href="#">Умные часы</a></li>
+                <li><a href="#">Экшн-камеры</a></li>
+            </ul>
+        </li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарантия</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
-    <!--Каталог товаров попап -->
-    <div class="catalog-menu">
-        <table>
-            <tr>
-                <td>Виртуальная реальность</td>
-                <td>Фитнес-браслеты</td>
-                <td>Квадрокоптеры</td>
-            </tr>
-            <tr>
-                <td>Моноподы для селфи</td>
-                <td>Умные часы</td>
-            </tr>
-            <tr>
-                <td>Экшн-камеры</td>
-            </tr>
-        </table>
 
-    </div>
   </header>
 <!-- Слайдеры. Три штуки по очереди. -->
 <main class="container">
