--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li>
-            <a href="#">Каталог товаров</a>
-            <!--Каталог товаров попап -->
-            <ul class="catalog-sub-menu">
-                <li><a href="#">Виртуальная реальность</a></li>
-                <li><a href="#">Фитнес-браслеты</a> </li>
-                <li><a href="#">Квадрокоптеры</a></li>
-                <li><a href="#">Моноподы для селфи</a></li>
-                <li><a href="#">Умные часы</a></li>
-                <li><a href="#">Экшн-камеры</a></li>
-            </ul>
+          <a href="#">Каталог товаров</a>
+          <!--Каталог товаров попап -->
+          <ul class="catalog-sub-menu">
+            <li><a href="#">Виртуальная реальность</a></li>
+            <li><a href="#">Фитнес-браслеты</a> </li>
+            <li><a href="#">Квадрокоптеры</a></li>
+            <li><a href="#">Моноподы для селфи</a></li>
+            <li><a href="#">Умные часы</a></li>
+            <li><a href="#">Экшн-камеры</a></li>
+          </ul>
         </li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарантия</a></li>
@@ -38,173 +38,177 @@
     </nav>
 
   </header>
-<!-- Слайдеры. Три штуки по очереди. -->
-<main class="container">
-    <div class="slider1">
-        <img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
-        <span class="number">01</span>
-        <p>Делай селфи, как Бен Стиллер!</p>
-        <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 
-        <!--форма? Подробнее-->
-    <table>
-        <tr>
-            <th>8,5 м</th>
-            <th>5 кг</th>
-            <th>Карбон</th>
-        </tr>
-        <tr>
-            <td>Длина палки</td>
-            <td>Вес палки</td>
-            <td>Материал</td>
-        </tr>
-    </table>
-    </div>
-    <div class="slider2">
-        <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
-        <span class="number">02</span>
-        <p>Худеем правильно!</p>
-        <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+  <main class="container">
+      <!-- Слайдеры. -->
+      <div class="slider">
+        <div class="slider1">
+          <img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
+          <span class="number">01</span>
+          <p>Делай селфи, как Бен Стиллер!</p>
+          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 
-        <!--форма? Подробнее-->
-        <table>
+          <!--форма? Подробнее-->
+          <table>
             <tr>
+              <th>8,5 м</th>
+              <th>5 кг</th>
+              <th>Карбон</th>
+            </tr>
+            <tr>
+              <td>Длина палки</td>
+              <td>Вес палки</td>
+              <td>Материал</td>
+            </tr>
+          </table>
+        </div>
+
+        <div class="slider2">
+            <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
+            <span class="number">02</span>
+            <p>Худеем правильно!</p>
+            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+
+            <!--форма? Подробнее-->
+            <table>
+              <tr>
                 <th>48 часов</th>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Без подзарядки</td>
-            </tr>
-        </table>
+              </tr>
+            </table>
+        </div>
 
-    </div>
-    <div class="slider3">
-        <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
-        <span class="number">03</span>
-        <p>Порхает как бабочка, жалит как пчела!</p>
-        <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+        <div class="slider3">
+            <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
+            <span class="number">03</span>
+            <p>Порхает как бабочка, жалит как пчела!</p>
+            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 
-        <!--форма? Подробнее-->
-        <table>
-            <tr>
+            <!--форма? Подробнее-->
+            <table>
+              <tr>
                 <th>800 м</th>
                 <th>50 м</th>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Дальность полета</td>
                 <td>Радиус поражения</td>
-            </tr>
-        </table>
-    </div>
+              </tr>
+            </table>
+        </div>
+      </div>
 
     <div class="popular">
-        <ul class="popular-items">
-            <li><a href="#"><img src="#" alt="Виртуальная реальность"></a></li>
-            <li><a href="#"><img src="#" alt="Моноподы для селфи"></a></li>
-            <li><a href="#"><img src="#" alt="Экшн-камеры"></a></li>
-            <li><a href="#"><img src="#" alt="Фитнес-браслеты"></a></li>
-            <li><a href="#"><img src="#" alt="Умные часы"></a></li>
-            <li><a href="#"><img src="#" alt="Квадрокоптеры"></a></li>
-        </ul>
-        <ul class="popular-names">
-            <li>Виртуальная реальность</li>
-            <li>Моноподы для селфи</li>
-            <li>Экшн-камеры</li>
-            <li>Фитнес-браслеты</li>
-            <li>Умные часы</li>
-            <li>Квадрокоптеры</li>
-        </ul>
+      <ul class="popular-items">
+        <li><a href="#"><img src="#" alt="Виртуальная реальность"></a></li>
+        <li><a href="#"><img src="#" alt="Моноподы для селфи"></a></li>
+        <li><a href="#"><img src="#" alt="Экшн-камеры"></a></li>
+        <li><a href="#"><img src="#" alt="Фитнес-браслеты"></a></li>
+        <li><a href="#"><img src="#" alt="Умные часы"></a></li>
+        <li><a href="#"><img src="#" alt="Квадрокоптеры"></a></li>
+      </ul>
+      <ul class="popular-names">
+        <li>Виртуальная реальность</li>
+        <li>Моноподы для селфи</li>
+        <li>Экшн-камеры</li>
+        <li>Фитнес-браслеты</li>
+        <li>Умные часы</li>
+        <li>Квадрокоптеры</li>
+      </ul>
     </div>
 
     <div class="services">
-        <ul>
-            <li>Доставка</li>
-            <li>Гарантия</li>
-            <li>Кредит</li>
-        </ul>
+      <ul>
+        <li>Доставка</li>
+        <li>Гарантия</li>
+        <li>Кредит</li>
+      </ul>
 
-        <div class="services-delivery">
-            <b>Доставка</b>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая на ваш этаж.</p>
-            <img src="#" alt="Доставка">
-        </div>
+      <div class="services-delivery">
+        <b>Доставка</b>
+        <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая на ваш этаж.</p>
+        <img src="#" alt="Доставка">
+      </div>
 
-        <div class="services-warranty">
-            <b>Гарантия</b>
-            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-            <img src="#" alt="Гарантия">
-        </div>
+      <div class="services-warranty">
+        <b>Гарантия</b>
+        <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+        <img src="#" alt="Гарантия">
+      </div>
 
-        <div class="services-credit">
-            <b>Кредит</b>
-            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
-            <img src="#" alt="Кредит">
-        </div>
+      <div class="services-credit">
+        <b>Кредит</b>
+        <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+        <img src="#" alt="Кредит">
+      </div>
     </div>
 
     <div class="logotypes">
-        <ul>
-            <li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="logo1"></a></li>
-            <li><a href="#"><img src="img/logo-2.png" width="260" height="100" alt="logo2"></a></li>
-            <li><a href="#"><img src="img/logo-3.png" width="260" height="100" alt="logo3"></a></li>
-            <li><a href="#"><img src="img/logo-4.png" width="260" height="100" alt="logo4"></a></li>
-        </ul>
+      <ul>
+        <li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="logo1"></a></li>
+        <li><a href="#"><img src="img/logo-2.png" width="260" height="100" alt="logo2"></a></li>
+        <li><a href="#"><img src="img/logo-3.png" width="260" height="100" alt="logo3"></a></li>
+        <li><a href="#"><img src="img/logo-4.png" width="260" height="100" alt="logo4"></a></li>
+      </ul>
     </div>
 
     <div class="info">
-        <b>О нас</b>
-        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-        <p>Мы можем доставит ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-        <ul>
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
-            <a href="#" class="more">Подробнее о нас</a>
-        </ul>
+      <b>О нас</b>
+      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+      <p>Мы можем доставит ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+        <a href="#" class="more">Подробнее о нас</a>
+      </ul>
     </div>
 
     <div class="contacts">
-        <b>Контакты</b>
-        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <img src="img/map.jpg" width="560" height="222" alt="Карта">
-        <a href="#" class="write-us-anchor">Напишите нам</a>
+      <b>Контакты</b>
+      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+      <img src="img/map.jpg" width="560" height="222" alt="Карта">
+      <a href="#" class="write-us-anchor">Напишите нам</a>
     </div>
 
-</main>
+  </main>
 
-    <footer class="main-footer">
-        <a href="#" class="logo-footer">Device</a>
-        <ul class="user-navigation-footer">
-            <li><a href="#">Войти</a></li>
-            <li><a href="#">Сравнить</a></li>
-            <li><a href="#">Корзина</a></li>
-        </ul>
-        <span class="contacts-footer">г. Москва, ул. Строителей, 15</span>
-        <ul class="site-navigation-footer">
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
-        <span class="contacts-footer">Тел.: +7(495)495-95-95</span>
-        <ul class="footer-sm">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twitter</a></li>
-        </ul>
+  <footer class="main-footer">
+    <a href="#" class="logo-footer">Device</a>
+    <ul class="user-navigation-footer">
+      <li><a href="#">Войти</a></li>
+      <li><a href="#">Сравнить</a></li>
+      <li><a href="#">Корзина</a></li>
+    </ul>
+    <span class="contacts-footer">г. Москва, ул. Строителей, 15</span>
+    <ul class="site-navigation-footer">
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Гарантия</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <span class="contacts-footer">Тел.: +7(495)495-95-95</span>
+    <ul class="footer-sm">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Instagram</a></li>
+      <li><a href="#">Twitter</a></li>
+    </ul>
 
-    </footer>
+  </footer>
 
-    <div class="write-us">
-        <b>Ваше имя:</b>
-        <!-- Форма -->
-        <b>Ваш e-mail:</b>
-        <!-- Форма -->
-        <b>Текст письма:</b>
-        <!-- Форма -->
-        <span>Отправить</span>
+  <div class="write-us">
+    <b>Ваше имя:</b>
+    <!-- Форма -->
+    <b>Ваш e-mail:</b>
+    <!-- Форма -->
+    <b>Текст письма:</b>
+    <!-- Форма -->
+    <span>Отправить</span>
 
 
 
-    </div>
+  </div>
 </body>
 
 </html>
