Исправляет список поп-товаров

--- a/index.html
+++ b/index.html
@@ -102,20 +102,12 @@
 
     <div class="popular">
       <ul class="popular-items">
-        <li><a href="#"><img src="#" alt="Виртуальная реальность"></a></li>
-        <li><a href="#"><img src="#" alt="Моноподы для селфи"></a></li>
-        <li><a href="#"><img src="#" alt="Экшн-камеры"></a></li>
-        <li><a href="#"><img src="#" alt="Фитнес-браслеты"></a></li>
-        <li><a href="#"><img src="#" alt="Умные часы"></a></li>
-        <li><a href="#"><img src="#" alt="Квадрокоптеры"></a></li>
-      </ul>
-      <ul class="popular-names">
-        <li>Виртуальная реальность</li>
-        <li>Моноподы для селфи</li>
-        <li>Экшн-камеры</li>
-        <li>Фитнес-браслеты</li>
-        <li>Умные часы</li>
-        <li>Квадрокоптеры</li>
+        <li><a href="#"><img src="#" alt="Виртуальная реальность"></a> <a href="#">Виртуальная реальность</a></li>
+        <li><a href="#"><img src="#" alt="Моноподы для селфи"></a> <a href="#">Моноподы для селфи</a></li>
+        <li><a href="#"><img src="#" alt="Экшн-камеры"></a> <a href="#">Экшн-камеры</a></li>
+        <li><a href="#"><img src="#" alt="Фитнес-браслеты"></a> <a href="#">Фитнес-браслеты</a></li>
+        <li><a href="#"><img src="#" alt="Умные часы"></a> <a href="#">Умные часы</a></li>
+        <li><a href="#"><img src="#" alt="Квадрокоптеры"></a> <a href="#">Квадрокоптеры</a></li>
       </ul>
     </div>
 
