--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <img src="#" alt="Кредит">
       </div>
     </div>
-
+<!--Графика была готова в прошлом пуле-->
     <div class="logotypes">
       <ul>
         <li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="logo1"></a></li>
