Добавляет форму поиска по сайту

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
   <header class="main-header">
     <a href="#" class="logo">Device</a>
-    <!--форма
-    Поиск по сайту
-    -->
+    <!--форма/Поиск по сайту-->
+    <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
+        <input type="text" name="search">
+    </form>
+
     <ul class="user-navigation">
       <li><a href="#">Войти</a></li>
       <li><a href="#">Сравнить</a></li>
