--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="#" class="logo">Device</a>
     <!--форма/Поиск по сайту-->
     <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
-        <input type="text" name="search">
+        <input type="text" name="search" placeholder="Поиск по сайту">
     </form>
 
     <ul class="user-navigation">
