Добавляет скрытый лейбл к поиску

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -11,7 +12,8 @@
     <a href="#" class="logo">Device</a>
     <!--форма/Поиск по сайту-->
     <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
-        <input type="text" name="search" placeholder="Поиск по сайту">
+        <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
+        <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
     </form>
 
     <ul class="user-navigation">
