Добавляет кнопки подробнее в слайдеры

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <span class="number">01</span>
           <p>Делай селфи, как Бен Стиллер!</p>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-
           <!--форма? Подробнее-->
+          <button type="button" name="button">Подробнее</button>
           <table>
             <tr>
               <th>8,5 м</th>
@@ -72,8 +72,8 @@
             <span class="number">02</span>
             <p>Худеем правильно!</p>
             <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-
             <!--форма? Подробнее-->
+            <button type="button" name="button">Подробнее</button>
             <table>
               <tr>
                 <th>48 часов</th>
@@ -89,8 +89,8 @@
             <span class="number">03</span>
             <p>Порхает как бабочка, жалит как пчела!</p>
             <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-
             <!--форма? Подробнее-->
+            <button type="button" name="button">Подробнее</button>
             <table>
               <tr>
                 <th>800 м</th>
