Добавляет кнопки в список сервисов

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
     <div class="services">
       <ul>
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Кредит</li>
+        <li><button type="button" name="button">Доставка</button></li>
+        <li><button type="button" name="button">Гарантия</button></li>
+        <li><button type="button" name="button">Кредит</button></li>
       </ul>
 
       <div class="services-delivery">
