Добавляет ссылку в карту

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="contacts">
       <b>Контакты</b>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <img src="img/map.jpg" width="560" height="222" alt="Карта">
+      <a href="#"><img src="img/map.jpg" width="560" height="222" alt="Карта"></a>
       <a href="#" class="write-us-anchor">Напишите нам</a>
     </div>
 
